adding recent changes

--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 	<head>
 		<link rel="stylesheet" href="css/bootstrap.css">	
 		<link rel="stylesheet" href="css/style.css">
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
-		<h1>Floating</h1>
 		<div class="container">
-			This is sample text 
-			This is sample text
-			This is sample text 
-			<div class="f_left"></div>
-			<div class="f_left"></div>
-			<div class="clear"></div>
+			<h1>Javascript</h1>
+			<ul id="cars_list">
+			</ul>	
 		</div>
 	</body>
 </html>
